Fix pricing icon's size on firefox

--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_pricing.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_pricing.scss
@@ -273,7 +273,7 @@ $magenta: #e22866;
     }
 
     img.pricing-card-check {
-      max-width: initial;
+      flex: 0;
     }
 
     select {
